--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5.3.2"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
