--- a/amplify.yml
+++ b/amplify.yml
@@ -3,15 +3,13 @@ backend:
   phases:
     build:
       commands:
-        - corepack enable
-        - yarn set version stable
-        - yarn install --prefer-offline
+        - npm ci --cache .npm --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     build:
       commands:
-        - yarn build
+        - npm run build
   artifacts:
     baseDirectory: .next
     files:
