--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
-    "aws-amplify": "^6.2.0",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "aws-amplify": "^6.3.4",
+    "eslint-config-next": "^14.2.3",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
     "@aws-amplify/backend-cli": "^1.0.1",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "aws-cdk-lib": "^2.143.0",
+    "constructs": "^10.3.0",
     "typescript": "^5.3.2"
-  },
-  "packageManager": "yarn@4.2.2"
+  }
 }
