--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ backend:
     build:
       commands:
         - npm i
+        - npx ampx generate graphql-client-code --out amplify/auth/post-confirmation/graphql
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
