--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.15.0",
     "@aws-amplify/backend-cli": "^1.5.0",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/aws-lambda": "^8.10.138",
     "@types/node": "^22.13.14",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
-    "autoprefixer": "^10.4.19",
     "aws-cdk-lib": "^2.143.0",
     "concurrently": "^9.1.2",
     "constructs": "^10.3.0",
     "eslint": "^9.23.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.1",
-    "tailwindcss": "^3.4.4",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5.3.2"
   },
   "overrides": {
